[gd_scene load_steps=11 format=3 uid="uid://bh4fbsapi3qhm"]

[ext_resource type="Texture2D" uid="uid://bdabvnqti2ghd" path="res://enemies/maikibi/maikibi.png" id="1_g5pg4"]
[ext_resource type="Script" path="res://enemies/maikibi/maikibi.gd" id="1_xxjt2"]
[ext_resource type="PackedScene" uid="uid://b7rr7bh3betwa" path="res://enemies/ui_elements.tscn" id="2_2chuh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_prbq5"]
height = 184.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ks6xh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4cwsy"]
height = 184.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_058r4"]
height = 184.0

[sub_resource type="SpriteFrames" id="SpriteFrames_hkiad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_g5pg4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_m20o1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k5jl6"]
radius = 141.057

[node name="maikibi" type="RigidBody2D" groups=["enemy"]]
process_mode = 1
collision_layer = 6
collision_mask = 0
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_xxjt2")

[node name="flame_spout_01" type="Area2D" parent="."]
visible = false

[node name="collider" type="CollisionShape2D" parent="flame_spout_01"]
position = Vector2(0, 102)
shape = SubResource("CapsuleShape2D_prbq5")
disabled = true

[node name="sprite" type="Sprite2D" parent="flame_spout_01"]
position = Vector2(4.76837e-07, 102)
scale = Vector2(20, 184)
texture = SubResource("PlaceholderTexture2D_ks6xh")

[node name="flame_spout_02" type="Area2D" parent="."]
visible = false
rotation = -1.78024

[node name="collider" type="CollisionShape2D" parent="flame_spout_02"]
position = Vector2(0, 102)
shape = SubResource("CapsuleShape2D_4cwsy")
disabled = true

[node name="sprite" type="Sprite2D" parent="flame_spout_02"]
position = Vector2(4.76837e-07, 102)
scale = Vector2(20, 184)
texture = SubResource("PlaceholderTexture2D_ks6xh")

[node name="flame_spout_03" type="Area2D" parent="."]
visible = false
rotation = 1.78024

[node name="collider" type="CollisionShape2D" parent="flame_spout_03"]
position = Vector2(0, 102)
shape = SubResource("CapsuleShape2D_058r4")
disabled = true

[node name="sprite" type="Sprite2D" parent="flame_spout_03"]
position = Vector2(4.76837e-07, 102)
scale = Vector2(20, 184)
texture = SubResource("PlaceholderTexture2D_ks6xh")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hkiad")

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_m20o1")

[node name="detection_area" type="Area2D" parent="."]

[node name="detection_shape" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_k5jl6")
debug_color = Color(1, 0, 0, 0.419608)

[node name="nav_agent" type="NavigationAgent2D" parent="."]
target_desired_distance = 25.0
debug_path_custom_color = Color(0, 0, 1, 1)

[node name="ui_elements" parent="." instance=ExtResource("2_2chuh")]
offset_top = -41.0
offset_bottom = 42.0

[node name="anim_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="spin_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="enemy_killed" from="." to="." method="_on_enemy_killed"]
[connection signal="body_entered" from="flame_spout_01" to="." method="_on_flame_spout_01_body_entered"]
[connection signal="body_entered" from="flame_spout_02" to="." method="_on_flame_spout_02_body_entered"]
[connection signal="body_entered" from="flame_spout_03" to="." method="_on_flame_spout_03_body_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="anim_timer" to="." method="_on_anim_timer_timeout"]
[connection signal="timeout" from="spin_timer" to="." method="_on_spin_timer_timeout"]
